// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderWithSearch component works as expected 1`] = `
<header>
  <h1
    className="title"
  >
    netflixroulette
  </h1>
  <p
    className="find-text"
  >
    find your movie
  </p>
  <div
    className="search-input"
  >
    <div
      className="MuiInputBase-root-14 MuiInput-root-1 MuiInput-underline-5"
      onClick={[Function]}
    >
      <input
        className="MuiInputBase-input-24 MuiInput-input-9"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value="Kill Bill"
      />
    </div>
  </div>
  <div
    className="search-controls"
  >
    <div
      className="search-by"
    >
      <span>
        Search by
      </span>
      <SearchByButton
        handleSearchByClick={[MockFunction]}
        selected={true}
        value="title"
      />
      <SearchByButton
        handleSearchByClick={[MockFunction]}
        selected={false}
        value="genres"
      />
    </div>
    <button
      className="MuiButtonBase-root-57 MuiButton-root-31 MuiButton-contained-42 MuiButton-raised-45 searchButton"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-32"
      >
        Search
      </span>
      <span
        className="MuiTouchRipple-root-60"
      />
    </button>
  </div>
</header>
`;

exports[`HeaderWithSearch should show typed text 1`] = `
<header>
  <h1
    className="title"
  >
    netflixroulette
  </h1>
  <p
    className="find-text"
  >
    find your movie
  </p>
  <div
    className="search-input"
  >
    <WithStyles(Input)
      onChange={[Function]}
      value="123"
    />
  </div>
  <div
    className="search-controls"
  >
    <div
      className="search-by"
    >
      <span>
        Search by
      </span>
      <SearchByButton
        handleSearchByClick={[MockFunction]}
        selected={true}
        value="title"
      />
      <SearchByButton
        handleSearchByClick={[MockFunction]}
        selected={false}
        value="genres"
      />
    </div>
    <WithStyles(Button)
      className="searchButton"
      disabled={false}
      onClick={[Function]}
      variant="contained"
    >
      Search
    </WithStyles(Button)>
  </div>
</header>
`;

exports[`HeaderWithSearch should switch search by button 1`] = `
<header>
  <h1
    className="title"
  >
    netflixroulette
  </h1>
  <p
    className="find-text"
  >
    find your movie
  </p>
  <div
    className="search-input"
  >
    <WithStyles(Input)
      onChange={[Function]}
      value="Kill Bill"
    />
  </div>
  <div
    className="search-controls"
  >
    <div
      className="search-by"
    >
      <span>
        Search by
      </span>
      <SearchByButton
        handleSearchByClick={[MockFunction]}
        selected={false}
        value="title"
      />
      <SearchByButton
        handleSearchByClick={[MockFunction]}
        selected={false}
        value="genres"
      />
    </div>
    <WithStyles(Button)
      className="searchButton"
      disabled={false}
      onClick={[Function]}
      variant="contained"
    >
      Search
    </WithStyles(Button)>
  </div>
</header>
`;
